src/ConfRoomApp/main/default/objects/Participant__c/fields/Booking_Detail__c.field-meta.xml
<CustomField>
    <fullName>Booking_Detail__c</fullName>
    <label>Booking Detail</label>
    <referenceTo>Booking_Detail__c</referenceTo>
    <relationshipLabel>Participants</relationshipLabel>
    <relationshipName>Participants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>