src/ConfRoomApp/main/default/objects/Participant__c/fields/Can_Cancel_Booking__c.field-meta.xml
<CustomField>
    <fullName>Can_Cancel_Booking__c</fullName>
    <formula>IF( TEXT(Role__c) == &apos;Creator&apos; || TEXT(Role__c) == &apos;Organizer&apos; , true, false)</formula>
    <label>Can Cancel Booking?</label>
    <type>Checkbox</type>
</CustomField>