src/ConfRoomApp/main/default/objects/Participant__c/fields/Guest__c.field-meta.xml
<CustomField>
    <fullName>Guest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guest</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Participants</relationshipName>
    <type>Lookup</type>
</CustomField>