src/ConfRoomApp/main/default/objects/Participant__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Creator</fullName>
            </value>
            <value>
                <fullName>Organizer</fullName>
            </value>
            <value>
                <fullName>Attendee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>